[gd_scene load_steps=28 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack02_3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_idle_1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack02_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack02_2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_dead_0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_dead_2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_dead_3.png" type="Texture" id=8]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_idle_2.png" type="Texture" id=9]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_dead_1.png" type="Texture" id=10]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_walk_0.png" type="Texture" id=11]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_walk_1.png" type="Texture" id=12]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_walk_2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_walk_3.png" type="Texture" id=14]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_idle_0.png" type="Texture" id=15]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack02_1.png" type="Texture" id=16]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_idle_3.png" type="Texture" id=17]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack01_0.png" type="Texture" id=18]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack01_2.png" type="Texture" id=19]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack01_1.png" type="Texture" id=20]
[ext_resource path="res://Sprites/8x8 Fantasy Platformer by Nordik Studio/8x8 Fantasy Platformer by Nordik Studio/Bosses/Butcher/B__Butcher_attack01_3.png" type="Texture" id=21]
[ext_resource path="res://audio/mobhit.wav" type="AudioStream" id=22]
[ext_resource path="res://audio/bossexploxe.wav" type="AudioStream" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "dead",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 16 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": false,
"name": "attack2",
"speed": 12.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack1",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3, 4.9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 40 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 7.31072 )

[node name="Butcher" type="KinematicBody2D" groups=[
"Mob",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "dead"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 2 )

[node name="Sight" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sight"]
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 15, 0 )

[node name="ChopArea" type="Area2D" parent="." groups=[
"MobsAttack",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChopArea"]
position = Vector2( 7.00791, -2.12627 )
shape = SubResource( 4 )
disabled = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 22 )
volume_db = -10.0

[node name="explode" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = -5.0
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="body_entered" from="ChopArea" to="." method="_on_Area2D_body_entered"]
